--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,8 @@ Table of Contents
 13. Add Profile Photo
 14. Terms & Conditions
 15. Onboarding
+16. Messages
+17. Chat view
 */
 
 /* 1. Variables =================== */
@@ -61,3 +63,9 @@ Table of Contents
 
 /* 15. Onboarding =============== */
 @import "components/onboarding";
+
+/* 16. Messages =============== */
+@import "layout/messages";
+
+/* 17. Chat view =============== */
+@import "layout/chatView";
