--- a/src/views/auth/forgot-password-validation.ejs
+++ b/src/views/auth/forgot-password-validation.ejs
@@ -38,7 +38,7 @@
 
       <div class="login-content">
         <div class="login_logo">
-          <img src="/logo.png" alt="Lend It Out Logo" class="logo">
+          <img src="/images/logo.png" alt="Lend It Out Logo" class="logo">
         </div>
 
 
