--- a/src/views/auth/forgot-password.ejs
+++ b/src/views/auth/forgot-password.ejs
@@ -18,7 +18,7 @@
 
       <div class="login-content">
         <div class="login_logo">
-          <img src="/logo.png" alt="Lend It Out Logo" class="logo">
+          <img src="/images/logo.png" alt="Lend It Out Logo" class="logo">
         </div>
 
         <div id="forgot-password-box" class="forgot-password">
