--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -8,7 +8,7 @@
 
   <script src="https://kit.fontawesome.com/380ad8a69c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
-  <!-- <script defer src="/scripts/event.js"></script> -->
+  <script defer src="/scripts/event.js"></script>
 
 </head>
 
@@ -18,7 +18,7 @@
 
       <div class="login-content">
         <div class="login_logo">
-          <img src="/logo.png" alt="Lend It Out Logo" class="logo">
+          <img src="/images/logo.png" alt="Lend It Out Logo" class="logo">
         </div>
 
         <div class="login-form">
