--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -8,7 +8,7 @@
 
   <div class="profile-info">
     <div class="profile-img">
-      <img src="https://picsum.photos/100" alt="profile-img">
+      <img src=<%= user.profilePic %> alt="profile-img">
 
       <div class="rating">
         <span class="star">★</span>
