--- a/src/views/profile/editProfile.ejs
+++ b/src/views/profile/editProfile.ejs
@@ -6,8 +6,8 @@
 <body>
 
   <div class="banner">
-    <img src="https://picsum.photos/300/300" alt="Profile" class="profile-pic"/>
-    <img src="https://picsum.photos/300/100" alt="header" class="header-pic"/>
+    <img src=<%= user.profilePic %> alt="Profile" class="profile-pic" />
+    <img src="https://picsum.photos/300/100" alt="header" class="header-pic" />
   </div>
 
   <main class="main">
@@ -29,4 +29,5 @@
   </main>
 
 </body>
+
 </html>
