--- a/src/views/onboarding/onboardLayout.ejs
+++ b/src/views/onboarding/onboardLayout.ejs
@@ -49,7 +49,7 @@
       <span class="dot"></span>
     </div>
 
-    <a href="/login" class="skip-link">Skip</a>
+    <a href="/auth/login" class="skip-link">Skip</a>
     
   </div>
 </body>
