--- a/src/views/profile/addprofilephoto.ejs
+++ b/src/views/profile/addprofilephoto.ejs
@@ -16,7 +16,7 @@
 <body class="add-profile-photo-page">
   <div class="container">
     <div class="skip">
-      <a href="/">Skip</a>
+      <a href="/interestsview">Skip</a>
     </div>
 
     <h1 class="page-title">Add Profile Photo</h1>
@@ -26,7 +26,9 @@
     </div>
 
     <button class="add-photo">Add Photo</button>
-    <button class="continue">Continue</button>
+    <a href="/interestsview">
+      <button class="continue">Continue</button>
+    </a>
   </div>
 </body>
 
