--- a/src/sass/media/_listings.scss
+++ b/src/sass/media/_listings.scss
@@ -234,3 +234,59 @@
     
   }
 }  
+
+
+// header
+.more-options-modal {
+  position: fixed;
+  top: 70px;
+  right: 20px;
+  background-color: #4a5a34;
+  color: white;
+  border-radius: 12px;
+  padding: 20px;
+  display: none; /* <- important */
+  z-index: 1000;
+  width: 240px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+
+
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .close-icon {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+    }
+  }
+
+  hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 12px 0;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      margin: 12px 0;
+
+      a {
+        color: white;
+        text-decoration: none;
+        font-size: 16px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
