--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -6,5 +6,7 @@ $color-line: #CFCFCF;
 $color-text: black;
 $color-white: white;
 $color-red: #ff2f32;
+$color-green: #4CAF50;
+$color-gray: #EEF0EC;
 
 $font-body: 'Helvetica Neue', Arial, sans-serif;
