--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,19 +1,19 @@
 <footer class="footer">
-    <nav class="nav-footer">
-        <a href="/" class="footer-link">
-            <i class="fa-solid fa-house"></i><br>Home
-        </a>
-        <a href="/explore" class="footer-link">
-            <i class="fa-solid fa-compass"></i><br>Explore
-        </a>
-        <a href="/add" class="footer-link add-btn">
-            <i class="fa-solid fa-plus"></i>
-        </a>
-        <a href="/cart" class="footer-link">
-            <i class="fa-solid fa-cart-shopping"></i><br>Cart
-        </a>
-        <a href="/profile" class="footer-link">
-            <i class="fa-solid fa-user"></i><br>Profile
-        </a>
-    </nav>
+  <nav class="nav-footer">
+    <a href="/" class="footer-link">
+      <i class="fa-solid fa-house"></i><br>Home
+    </a>
+    <a href="/explore" class="footer-link">
+      <i class="fa-solid fa-compass"></i><br>Explore
+    </a>
+    <a href="/posting/create" class="footer-link add-btn">
+      <i class="fa-solid fa-plus"></i>
+    </a>
+    <a href="/cart" class="footer-link">
+      <i class="fa-solid fa-cart-shopping"></i><br>Cart
+    </a>
+    <a href="/profile" class="footer-link">
+      <i class="fa-solid fa-user"></i><br>Profile
+    </a>
+  </nav>
 </footer>
