--- a/src/views/auth/forgot-password-validation.ejs
+++ b/src/views/auth/forgot-password-validation.ejs
@@ -8,28 +8,7 @@
 
   <script src="https://kit.fontawesome.com/380ad8a69c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
-  <!-- <script defer src="/scripts/event.js"></script> -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const inputs = document.querySelectorAll(".codeBox");
-
-      inputs.forEach((input, index) => {
-        input.addEventListener("input", (e) => {
-          const value = e.target.value;
-          if (value.length === 1 && index < inputs.length - 1) {
-            inputs[index + 1].focus();
-          }
-        });
-
-        // Optional: handle backspace to move focus to previous
-        input.addEventListener("keydown", (e) => {
-          if (e.key === "Backspace" && !input.value && index > 0) {
-            inputs[index - 1].focus();
-          }
-        });
-      });
-    });
-  </script>
+  <script defer src="/scripts/event.js"></script>
 </head>
 
 <body>
