--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,7 @@ Table of Contents
 18. Chat view
 20. Cart
 21. Carousel
+22. Checkout
 */
 
 /* 1. Variables =================== */
@@ -87,3 +88,6 @@ Table of Contents
 
 /* 21. Carousel =========== */
 @import "components/carousel";
+
+/* 22. Checkout =========== */
+@import "components/checkout";
