--- a/src/views/cart/cart.ejs
+++ b/src/views/cart/cart.ejs
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="/css/style.css">
 <script src="https://kit.fontawesome.com/380ad8a69c.js" crossorigin="anonymous"></script>
 
-<!-- Header Section -->
 <header class="header">
     <div class="header-bar">
         <a href="/">
@@ -30,11 +29,13 @@
             <% if (item.canRent) { %><button>Rent</button><% } %>
             <% if (item.canBuy) { %><button>Buy</button><% } %>
           </div>
-          <div class="contracts">
+          <a href="/termsconditions">
+            <div class="contracts">
             <% item.contracts.forEach(contract => { %>
               <span><%= contract %></span>
             <% }) %>
           </div>
+          </a>
           <div class="insurance">
             <input type="checkbox" id="insurance-<%= item.id %>" <%= item.insuranceSelected ? 'checked' : '' %> />
             <label for="insurance-<%= item.id %>">Insurance $<%= item.insurance %></label>
@@ -50,7 +51,9 @@
       <div class="total-line"><span>Shipping</span><span>$<%= shipping %></span></div>
       <hr />
       <div class="total-line"><strong>Total</strong><strong>$<%= total %></strong></div>
-      <button class="checkout-btn">Check out</button>
+      <a href="/cart/checkout">
+        <button class="checkout-btn">Check out</button>
+      </a>
     </div>
 </div>
 
